--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/fullstack_app
 spring.datasource.username=root
 spring.datasource.password=
 
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
